fix overflow loading page bug

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -19,7 +19,9 @@ html, body {
   width: 100%;
   height: 100%;
   padding: 0;
-  margin: 0; }
+  margin: 0;
+  overflow-y: auto;
+ }
 
 * {
   margin: 0;
